Fixed spacing issue
Fixed issue where description boxes were taking up more than half of the parent div.

--- a/weddingparty.css
+++ b/weddingparty.css
@@ -18,12 +18,13 @@ div{
 .bride-groom{
     margin-bottom: 15px;
 }
+
 .party-member{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+    max-width: 50%;
 }
 .party-member *{
     margin: 5px 15px;
